kubernetes/pods/butterfly-demo-elb/deployment.yml
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: butterfly-2
spec:
  selector:
    matchLabels:
      app: butterfly-2
  replicas: 1
  template:
    metadata:
      labels:
        app: butterfly-2
    spec:
      containers:
      - name: butterfly
        image: garland/butterfly:latest
        ports:
        - containerPort: 80
        args:
          - "--unsecure"
          - "--host=0.0.0.0"
          - "--port=57575"
          - "--login"
        resources:
          limits:
            cpu: 1000m
            memory: 250Mi
          requests:
            cpu: 100m
            memory: 50Mi
        ports:
          - containerPort: 57575
        imagePullPolicy: "Always"
      nodeSelector:
        k8s.info/isSpot: "true"
        k8s.info/hasPublicIP: "false"
